[package]
name = "programs_executor"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-lang = "0.31.1"
async-trait = "0.1.82"

anchor-client = "0.31.1"
tokio = { version = "1.0", features = ["full"] }
solana-sdk = "2.2.2"
solana-client = "2.2.2"
anyhow = "1.0"
serde_json = "1.0.140"
shellexpand = "3.1.1"
lazy_static = "1.5.0"
